--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,12 @@
     margin-right:10px;
     text-align:center;
 }
+.item4{
+    flex:none;
+    width:15%;
+    margin-right:10px;
+    text-align:center;
+}
 .list2{
     display:none;
     position:fixed;
