--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,8 @@
     display: flex;
     width:50%;
     justify-content:flex-end;
-    font-family: Georgia, serif;
     flex:auto;
+    font-family: Georgia, serif;
 }
 .item1{
     flex:none;
@@ -148,6 +148,7 @@
     flex-wrap:wrap;
     justify-content:center;
     align-items:center;
+    font-family: Georgia, serif;
 }
 .section1{
     display:flex;
@@ -158,6 +159,7 @@
     background-color: #637A9F;
     justify-content:center;
     align-items:center;
+    font-family: Georgia, serif;
 }
 .section1 a{
     width:90%;
@@ -180,8 +182,47 @@
     background-color: #637A9F;
     justify-content:center;
     align-items:center;
+    font-family: Georgia, serif;
 }
-.section2 iframe{
+.section2 a{
+    width:90%;
+    height:90%;
+    justify-content:center;
+    align-items:center;
+}
+.section2 img{
+    width:100%;
+    height:100%;
+    justify-content:center;
+    align-items:center;
+}
+.section3{
+    display:flex;
+    flex:none;
+    width:45%;
+    height:400px;
+    margin:10px;
+    background-color: #637A9F;
+    justify-content:center;
+    align-items:center;
+}
+.section3 a{
+    width:90%;
+    height:90%;
+    justify-content:center;
+    align-items:center;
+}
+.section4{
+    display:flex;
+    flex:none;
+    width:45%;
+    height:400px;
+    margin:10px;
+    background-color: #637A9F;
+    justify-content:center;
+    align-items:center;
+}
+.section4 a{
     width:90%;
     height:90%;
     justify-content:center;
